# Workingish

./: .dockerignore  .env.example  .last_command_check.txt  .last_command_sync  .replit  Dockerfile  IMPROVEMENTS.md  README-API.md  README-Commands.md  README-Docker.md  README-Premium.md  README.md  clean_decorators.py  cog_command_fix.py  command_fix_implementation.py  command_fix_plan.md  command_registration_fix.py  config.py  current_sync_function.py  dependencies.txt  docker-compose.yml  fix_all_commands.py  fix_command_definitions.py  fixed_main.py  main.py  main.py.bak  main_fixed.py  main_refactored.py  new_sync_commands.py  new_sync_function.py  package-lock.json  package.json  py_cord_standardize.py  pyproject.toml  rate_limit_state.json  register_commands.py  register_minimal.py  unified_command_fix.py  verify_commands.py
DiscordCompanion-main/: .replit  app.py  main.py
Newest1-main/: .env.example  .replit  config.py  main.py  models.py  pyproject.toml
cogs/: __init__.py  admin_commands.py  analytics_cog.py  connection_commands.py  faction_commands.py  faction_commands.py.new  killfeed_commands.py  killfeed_commands.py.bak  killfeed_commands_refactored.py  mission_commands.py  mission_commands_refactored.py  notification_cog.py  rivalry_commands.py  server_commands.py  server_commands_refactored.py  server_commands_slash.py  stats_commands.py  stats_commands.py.bak  stats_commands_refactored.py
database/: connection.js  connection.py  models.py  schema.py
events/: messageCreate.js  ready.js
parsers/: batch_csv_parser.py  csv_parser.py  log_parser.py
(+69 files in other folders)
